--- a/src/pages/shop/shop/shop_style.css
+++ b/src/pages/shop/shop/shop_style.css
@@ -7,9 +7,10 @@
     height:100vh;
     align-items: center;
     justify-content: center;
-    overflow-x: scroll;
+    overflow-y: scroll;
     background-color: #fd4f4f;
     width: fit-content;
+    overflow-x: hidden;
 }
 
 .ShopTitle{
